--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@ body {
 
 .horizontal-underline {
   border-bottom-width: 0;
-  background-image: linear-gradient(transparent, transparent), linear-gradient(#de1d8d, #de1d8d);
+  background-image: linear-gradient(transparent, transparent), linear-gradient(#8353E2, #8353E2);
   background-size: 0 3px;
   background-position: 0 100%;
   background-repeat: no-repeat;
