--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,11 @@ body {
 	scroll-behavior: smooth;
 }
 
+::selection {
+  background-color: #05B19A;
+  color: #fefefe;
+}
+
 @layer base {
 	body {
 		@apply text-dark dark:text-light;
@@ -117,7 +122,7 @@ body {
 }
 
 .prose .anchor {
-	@apply absolute invisible cursor-pointer;
+	@apply absolute invisible no-underline;
 	margin-left: -1em;
 	padding-right: 0.5em;
 	width: 80%;
@@ -129,7 +134,7 @@ body {
 }
 
 .prose a {
-	@apply transition-all decoration-neutral-400 dark:decoration-neutral-600 underline-offset-2 decoration-[0.1em];
+	@apply transition-all decoration-secondary dark:decoration-secondary underline-offset-2 decoration-[0.1em];
 }
 
 .prose .anchor:after {
@@ -139,19 +144,6 @@ body {
 
 .prose *:hover > .anchor {
 	@apply visible;
-}
-
-.prose pre {
-	@apply border border-neutral-800 bg-neutral-900;
-}
-
-.prose code {
-	@apply text-neutral-800 dark:text-neutral-200 px-1 py-0.5 border border-neutral-100 dark:border-neutral-800 rounded-lg bg-neutral-100 dark:bg-neutral-900;
-}
-
-.prose pre code {
-	@apply text-neutral-800 dark:text-neutral-200 p-0;
-	border: initial;
 }
 
 .prose img {
@@ -178,14 +170,6 @@ pre {
 	scrollbar-width: none; /* Firefox */
 }
 
-/* Remove Safari input shadow on mobile */
-input[type='text'],
-input[type='email'] {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-}
-
 table {
 	display: block;
 	max-width: fit-content;
@@ -194,7 +178,7 @@ table {
 }
 
 [data-rehype-pretty-code-fragment] code {
-	@apply grid min-w-full break-words rounded-none border-0 bg-transparent p-0 text-sm text-black;
+	@apply grid min-w-full break-words rounded-none border-0 p-0 text-sm text-black;
 	counter-reset: line;
 	box-decoration-break: clone;
 }
@@ -211,13 +195,13 @@ table {
 	color: gray;
 }
 [data-rehype-pretty-code-fragment] .line--highlighted {
-	@apply bg-slate-500 bg-opacity-10;
+	@apply bg-opacity-10;
 }
 [data-rehype-pretty-code-fragment] .line-highlighted span {
 	@apply relative;
 }
 [data-rehype-pretty-code-fragment] .word--highlighted {
-	@apply rounded-md bg-slate-500 bg-opacity-10 p-1;
+	@apply rounded-md bg-opacity-10 p-1;
 }
 [data-rehype-pretty-code-title] {
 	@apply px-4 py-3 font-mono text-xs font-medium border rounded-t-lg text-neutral-200 border-[#333333] bg-[#1c1c1c];
