--- a/app/globals.css
+++ b/app/globals.css
@@ -31,7 +31,7 @@ body {
 		@apply mb-8 md:mb-12 text-xl md:text-3xl font-bold dark:text-light text-dark;
 	}
 	.link {
-		@apply font-bold text-gray-900 dark:text-gray-400 hover:text-primary dark:hover:text-secondary underline transition;
+		@apply font-bold text-gray-900 dark:text-gray-400 transition border-solid border-b-2 border-primary;
 	}
 	.btn {
 		@apply px-6 py-2 text-base font-bold rounded-full duration-200 ease-in-out;
@@ -81,6 +81,10 @@ body {
 	background-position: 0 100%;
 }
 
+.link {
+	@apply hover:text-secondary;
+}
+
 .underline {
 	text-decoration: none;
 	position: relative;
@@ -95,7 +99,7 @@ body {
 	width: 100%;
 	transform: rotate(-1deg);
 	border-width: 2px;
-	@apply border-solid border-secondary dark:border-primary;
+	@apply border-solid border-secondary;
 }
 
 .wave {
