--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,24 @@ html,
 body {
 	padding: 0;
 	margin: 0;
+
+	::-webkit-scrollbar {
+  	width: 8px;
+	}
+
+	::-webkit-scrollbar-track {
+		background: transparent;
+	}
+
+	::-webkit-scrollbar-thumb {
+		background: #8353E2;
+		border-radius: 20px;
+		height: 10px;
+	}
+
+	::-webkit-scrollbar-thumb:hover {
+		background: #555;
+	}
 }
 * {
 	box-sizing: border-box;
