--- a/app/globals.css
+++ b/app/globals.css
@@ -193,8 +193,8 @@ body {
   border: initial;
 }
 
-code:not(pre code) {
-  @apply text-neutral-800 dark:text-neutral-200 px-1 py-0.5 border border-neutral-200 dark:border-neutral-800 rounded-lg bg-neutral-100 dark:bg-neutral-900;
+.prose code:not(pre code) {
+  @apply px-1 py-0.5 after:content-[''] before:content-[''] font-normal border border-neutral-400 dark:border-neutral-700 rounded bg-dark/10 dark:bg-dark/10;
 }
 
 code[class*='language-'],
