--- a/app/globals.css
+++ b/app/globals.css
@@ -35,10 +35,10 @@ body {
 }
 
 @layer base {
-	body, b {
+	b {
 		@apply text-dark dark:text-light;
 	}
-	p {
+	body {
 		@apply text-gray-900 dark:text-gray-400;
 	}
 }
